@@ -1,6 +1,11 @@
+2015-12-28  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
+
+	PR libfortran/68987
+	io/format.c (format_error): Remove unneeded memory cleanup.
+
 2015-12-14  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
 
-	PR libfortran/pr68867
+	PR libfortran/68867
 	* io/write.c (set_fnode_default): For kind=16, set the decimal precision
 	depending on the platform binary precision, 106 or 113.
 
